# sample_rust_web_server

./: Cargo.toml
src/: jwt.rs  main.rs  processes.rs  state.rs
src/json_serialization/: to_do_item.rs  to_do_items.rs
src/to_do/: enums.rs  mod.rs
src/to_do/structs/: base.rs  done.rs  mod.rs  pending.rs
src/to_do/traits/: create.rs  delete.rs  edit.rs  get.rs  mod.rs
src/views/: mod.rs
src/views/auth/: mod.rs
src/views/to_do/: create.rs  edit.rs  get.rs  mod.rs
